@@ -104,11 +104,12 @@ module Gem
         dirname = File.dirname e.message.split("-")[1].strip
         raise Gem::FilePermissionError.new(dirname)
       rescue RuntimeError => ex
-        STDERR.puts "While generating documentation for #{@spec.full_name}"
-        STDERR.puts "... MESSAGE:   #{ex}"
-        STDERR.puts "... RDOC args: #{args.join(' ')}"
-        STDERR.puts ex.backtrace if Gem.configuration.backtrace
-        STDERR.puts "(continuing with the rest of the installation)"
+        alert_error "While generating documentation for #{@spec.full_name}"
+        ui.errs.puts "... MESSAGE:   #{ex}"
+        ui.errs.puts "... RDOC args: #{args.join(' ')}"
+        ui.errs.puts "\t#{ex.backtrace.join "\n\t"}" if
+          Gem.configuration.backtrace
+        ui.errs.puts "(continuing with the rest of the installation)"
       ensure
         Dir.chdir(old_pwd)
       end
